--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "angular-animate": "1.5.5",
     "angular-aria": "^1.5.5",
     "angular-material": "1.0.8",
-    "angular-messages": "1.5.5"
+    "angular-messages": "1.5.5",
+    "angularfire": "^1.2",
+    "font-awesome": "^4.6"
   },
   "devDependencies": {
     "angular-mocks": "1.5.5",
